lab core values and papers

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@ header:
     overlay_color: "#000"
     overlay_filter: "0.2"
     overlay_image: /assets/images/TAN_1993.JPG
-excerpt: "Department of Integrative Biology<br>& Department of Computational Mathematics, Science and Engineering<br>Michigan State University."
+excerpt: "Department of Integrative Biology<br>Department of Computational Mathematics, Science and Engineering<br>Michigan State University"
 ---
-
 <div>
 <h2>About the lab</h2>
   <div>
@@ -18,7 +17,7 @@ excerpt: "Department of Integrative Biology<br>& Department of Computational Mat
 
   <p>In our mechanistic research, we address how early social experiences may impact the specialized brain regions necessary to produce learned vocalizations. In this research, we focus parental care behavior as a critical source of variation in early social experiences. We also use avian study systems for this research, with a particular focus on the zebra finch, which has been an important model system for the neurogenetic mechanisms underlying social learning and auditory perception of vocal signals. Our goals include contributing to a broader understanding of brain regions critical for socially learned behaviors are robust or sensitive to early experiences, as well as developing new hardware and software tools to collect and analyze behavioral data. </p>
 
-  The Smith-Vidaurre Lab is led by <a href="/grace">Grace Smith-Vidaurre</a>, Assistant Professor and 1855 Professor of Data Science at Michigan State University in the <a href="https://integrativebiology.natsci.msu.edu/">Department of Integrative Biology</a> and the <a href="https://cmse.msu.edu/">Department of Computational Mathematics, Science, and Engineering</a>. 
+  The Smith-Vidaurre Lab is led by <a href="/grace">Grace Smith-Vidaurre</a>, Assistant Professor and 1855 Professor of Data Science at Michigan State University in the <a href="https://integrativebiology.natsci.msu.edu/">Department of Integrative Biology</a> and the <a href="https://cmse.msu.edu/">Department of Computational Mathematics, Science, and Engineering</a>.
   </div>
 </div>
 
