Lab core values restructuring

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ excerpt: "Department of Integrative Biology<br>Department of Computational Mathe
 
 <p>Across these lines of research, we develop and test new hardware and software tools to collect and analyze empirical or simulated data.</p>
 
-  The Smith-Vidaurre Lab is led by <a href="/grace">Grace Smith-Vidaurre</a>, Assistant Professor and 1855 Professor of Data Science at Michigan State University in the <a href="https://integrativebiology.natsci.msu.edu/">Department of Integrative Biology</a> and the <a href="https://cmse.msu.edu/">Department of Computational Mathematics, Science, and Engineering</a>.
+  The Smith-Vidaurre Lab is led by <a href="/grace">Grace Smith-Vidaurre</a>, Assistant Professor and 1855 Professor of Data Science at Michigan State University in the <a href="https://integrativebiology.natsci.msu.edu/">Department of Integrative Biology</a> and the <a href="https://cmse.msu.edu/">Department of Computational Mathematics, Science, and Engineering</a>. We are scientists who work together as a collaborative team to achieve our goals. We come from different cultural, socioeconomic, and scientific backgrounds. We recognize that each lab member has unique intersectional identities and lived experiences that will shape their scientific perspectives, interests, and career goals. We are committed to making the lab an inclusive space for a diverse group of researchers from underrepresented groups and historically excluded backgrounds. This includes people of color, 2SLGBTQIA+, disabled people, caregivers, first-generation degree holders, and others.
   </div>
 </div>
 
