Structuring for images

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: splash
 permalink: /
 header:
     overlay_color: "#000"
-    overlay_filter: "0.2"
+    overlay_filter: "0.01"
     overlay_image: /assets/images/TAN_1993.JPG
-    caption: "@Tania Molina: Monk parakeets staging near nests in Uruguay"
+    caption: "@Tania Molina"
 excerpt: "Department of Integrative Biology<br>Department of Computational Mathematics, Science and Engineering<br>Michigan State University"
 ---
 
