Adding research team

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ excerpt: "Department of Integrative Biology<br>Department of Computational Mathe
 <div>
 <h2>About the lab</h2>
   <div>
-  <p>The Smith-Vidaurre Lab works on the functions of socially learned vocalizations and the early-life sensitivity of vocal learning. We develop computational pipelines and new tools to collect and analyze data. The lab is led by <a href="https://smith-vidaurre.com">Grace Smith-Vidaurre</a>, Assistant Professor and 1855 Professor of Data Science at Michigan State University in the <a href="https://integrativebiology.natsci.msu.edu/">Department of Integrative Biology</a>, the <a href="https://cmse.msu.edu/">Department of Computational Mathematics, Science, and Engineering</a>, and the <a href="https://eeb.msu.edu/">Ecology, Evolution, and Behavior program</a>. </p>
+  <p>The Smith-Vidaurre Lab, or the Behavior IntegRated with Data Science (BIRDS) Lab, works on the functions of socially learned vocalizations and the early-life sensitivity of vocal learning. We develop computational pipelines and new tools to collect and analyze data. The lab is led by <a href="https://smith-vidaurre.com">Grace Smith-Vidaurre</a>, Assistant Professor and 1855 Professor of Data Science at Michigan State University in the <a href="https://integrativebiology.natsci.msu.edu/">Department of Integrative Biology</a>, the <a href="https://cmse.msu.edu/">Department of Computational Mathematics, Science, and Engineering</a>, and the <a href="https://eeb.msu.edu/">Ecology, Evolution, and Behavior program</a>. </p>
 
-  <p>In one of the main lines of research in the lab, we focus on how animals use socially learned vocalizations. This research is primarily driven by questions about how animals encode and perceive information about individual identity and social affiliations in learned vocal signals. We use avian study systems for this research, primarily parrots and songbirds, although we use simulation approaches as well. The primary study species for this line of research are monk parakeets (<em>Myiopsitta monachus</em>) and zebra finches (<em>Taeniopygia guttata</em>). Our goals are to gain new insights into the diversity of identity information animals communicate to others through vocal signals and how information encoding in learned vocalizations can change over short evolutionary timescales.</p>
+  <p>We focus on how animals use socially learned vocalizations. This research is primarily driven by questions about how animals encode and perceive information about individual identity and social affiliations in learned vocal signals. We use avian study systems for this research, primarily parrots and songbirds, although we use simulation approaches as well. The primary study species for this line of research are monk parakeets (<em>Myiopsitta monachus</em>) and zebra finches (<em>Taeniopygia guttata</em>). Our goals are to gain new insights into the diversity of identity information animals communicate to others through vocal signals and how information encoding in learned vocalizations can change over short evolutionary timescales.</p>
 
   <p>We also address how early social experiences may impact the information that animals encode in learned vocalizations, and the specialized brain regions necessary to produce learned vocal signals. In this research, we focus on parental care behavior as a critical source of variation that can shape individuals' early social lives. We use avian study systems for this research, with a particular focus on the zebra finch, which has been an important model system for the neurogenetic mechanisms underlying social learning and auditory perception of vocal signals. Our goals include contributing to a broader understanding of how the brain regions critical for a specialized form of social learning may be responsive to early experiences.</p>
 
@@ -37,4 +37,9 @@ excerpt: "Department of Integrative Biology<br>Department of Computational Mathe
   </li>
   {% endfor %}
 </ul>
+</div>
+
+<div>
+<h2>Resources</h2>
+<body>The Larremore Lab website <a href="https://github.com/LarremoreLab/LarremoreLab.github.io/tree/master">repo</a> was a useful guide for website layout and configuration.</body>
 </div>
