--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 header:
     overlay_color: "#000"
     overlay_filter: "0.01"
-    overlay_image: /assets/images/TAN_1993_screenshot.JPG
+    overlay_image: /assets/images/TAN_1993.JPG
     caption: "@Tania Molina"
 excerpt: "Department of Integrative Biology<br>Department of Computational Mathematics, Science and Engineering<br>Michigan State University"
 ---
